XXX paginated job list, some basic filtering, etc
